force-app/main/default/objects/ffr__ReportingDrillMapping__c/ffr__ReportingDrillMapping__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffr__helpreportingdrillmapping</customHelpPage>
    <label>Reporting Drill Mapping</label>
    <nameField>
        <label>Reporting Drill Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Drill Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>