force-app/main/default/objects/ffr__ReportingDrillMapping__c/fields/ffr__DrillType__c.field-meta.xml
<CustomField>
    <fullName>ffr__DrillType__c</fullName>
    <label>Drill Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prompt</fullName>
            </value>
            <value>
                <fullName>Column Filter</fullName>
            </value>
            <value>
                <fullName>Grouping Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>